--- a/css/styles.css
+++ b/css/styles.css
@@ -125,7 +125,7 @@ button:hover {
 }
 
 .body-login {
-  background-image: url("/img/signo_login.png");
+  background-image: url("./img/signo_login.png");
   background-size: cover;
   background-position: center;
 }
